# ffmpeg_opencv_project

./: CMakeLists.txt  build.sh
docker/: Dockerfile  build.sh  run_ffmpeg_build_sys.sh
include/libavutil/: ffversion.h
libs/: libavcodec.so.59  libavdevice.so.59  libavdevice.so.59.8.101  libavfilter.so.8  libavformat.so.59  libavformat.so.59.34.100  libavutil.so.57  libavutil.so.57.39.100  libpostproc.so.56  libpostproc.so.56.7.100  libswresample.so.4  libswresample.so.4.9.100  libswscale.so.6  libswscale.so.6.8.112
libs/pkgconfig/: SvtAv1Enc.pc  aom.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
src/: main.cpp
